Add second and third games

--- a/qr.html
+++ b/qr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Centered Input Field</title>
+  <title>Qr</title>
   <style>
     body {
       display: flex;
