--- a/arduino.html
+++ b/arduino.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Centered Input Field</title>
+  <title>Arduino</title>
   <style>
     body {
       display: flex;
